@@ -2,6 +2,11 @@ GNU coreutils NEWS                                    -*- outline -*-
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+** Bug fixes
+
+  ls --color once again honors the 'NORMAL' dircolors directive.
+  [bug introduced in coreutils-6.11]
+
 ** New features
 
   join now accepts the --header option, to treat the first line of each
